syntax = "proto3";

option java_package = "com.hualala.app.businessOperation.grpc";
option java_outer_classname = "BusinessOperationData";
import "commons.proto";

message QueryPageInfoRequest {  
   // 查询起始时间
   string beginTransDate=3;
   // 查询结束时间
   string endTransDate=4;
   // 账号ID
   string accountNo=6;
   // 归属机构id
   string organizationId=7;
   // 账号名称
   string accountName=8;
   // 权益账户类型
   EquityType equityType=9;
   // 系统来源
   string fromSystem=10;
   // 操作类型
   string amountType=11;
   // 订单号
   string orderNo=12;
   // 查询总数
   int32 totalSize=13;
   // 查询分页信息
   RequestPageHeader pageHeader=2;
   // 请求公共字段
   RequestHeader header=1;
}
enum EquityType {  
   EQUITY_TYPE_NONE=0;
   SMS=1;
   ID_CARD=2;
   INTERVIEW=3;
   PAYMENT_FLOW=4;
   ELECTRONIC_INVOICE=5;
   RED_PACKET_WECHAT=6;
}
message ConsumePageInfoResponse {  
   // 消费明细列表
   repeated ConsumeResponse records=3;
   // 查询分页信息
   ResultPageHeader pageHeader=2;
   // 响应公共字段
   ResultHeader result=1;
}
message ConsumeResponse {  
   // consumeModel
   ConsumeModel model=2;
   // 资产消费流水号
   string consumeTransNo=3;
   // 记录状态
   string action=4;
   // 创建时间
   string createStamp=5;
   // 修改时间
   string actionStamp=6;
   // 消费交易状态
   string consumeTransState=7;
   // ID
   string id=8;
   // 账号名称
   string accountName=9;
   // 当前余额
   int64 currentBalance=10;
   // 响应公共字段
   ResultHeader result=1;
}
message ConsumeModel {  
   // 消费请求流水号
   string consumeOrderNo=2;
   // 账号ID
   string accountNo=3;
   // 资产扣减数量
   int64 consumeAmount=4;
   // 业务来源
   string businessSrc=5;
   // 业务类型
   string businessType=6;
   // 二级业务类型
   string subBusinessType=7;
   // 业务来源TOKEN
   string businessSrcToken=8;
   // 交易日期
   string transDate=9;
   // 交易时间
   string transTime=10;
   // 操作员
   string operatorId=11;
   // 备注
   string memo=12;
   // 权益账户类型
   string equityType=13;
   // 归属机构id
   string organizationId=14;
   // 归属机构类型
   string organizationType=15;
}
message NoticeInfoRequest {  
   // 公告标题
   string title=2;
   // 公告发布时间
   string publishStamp=3;
   // 公告生效开始时间
   string effectiveBeginStamp=4;
   // 公告生效结束时间
   string effectiveEndStamp=5;
   // 权益账户类型
   int32 noticeType=6;
   // 公告信息
   string message=7;
   // 是否可以提现
   int32 noticeWithdraw=8;
   // 适用平台
   int32 noticeSystem=9;
   // 公告通知集合
   string noticeList=10;
   // 操作员
   string operatorId=11;
   // 公告备注
   string memo=12;
   // 公告状态
   string noticeStats=13;
   // 请求公共字段
   RequestHeader header=1;
}
message NoticeInfoResponse {  
   // ID
   int64 id=2;
   // 公告标题
   string title=3;
   // 公告发布时间
   string publishStamp=4;
   // 公告生效开始时间
   string effectiveBeginStamp=5;
   // 公告生效结束时间
   string effectiveEndStamp=6;
   // 权益账户类型
   int32 noticeType=7;
   // 公告信息
   string noticeMessage=8;
   // 是否可以提现
   int32 noticeWithdraw=9;
   // 适用平台
   int32 noticeSystem=10;
   // 公告通知集合
   string noticeList=11;
   // 操作员
   string operatorId=12;
   // 公告备注
   string memo=13;
   // 公告状态
   int32 noticeStats=14;
   // 记录状态
   int32 action=15;
   // 响应公共字段
   ResultHeader result=1;
}
message StaticsEquityTrendByActionRequest {  
   // 集团ID
   string organizationId=2;
   // 请求公共字段
   RequestHeader header=1;
}
message StaticsEquityTrendByActionResponse {  
   // 统计各权益账户类型近7日数据趋势
   repeated StaticByEquityType records=2;
   // 响应公共字段
   ResultHeader result=1;
}
message StaticByEquityType {  
   // 消费或充值的近7日趋势
   repeated StaticByAction staticByAction=2;
   // 权益账户类型
   string equityType=3;
}
message StaticByAction {  
   // 近7日趋势
   repeated Amount trendList=2;
   // 操作类型
   string actionType=3;
}
message Amount {  
   // 金额
   int64 amount=2;
}
message FirstPageInfoRequest {  
   // 查询时间
   string queryDate=2;
   // 归属机构id
   string organizationId=3;
   // 归属机构id
   string organizationType=4;
   // 首页类型枚举
   FirstType firstType=5;
   // 请求公共字段
   RequestHeader header=1;
}
enum FirstType {  
   FIRST_TYPE_NONE=0;
   EQUITY=1;
   PAY_ORDER=2;
}
message FirstPageInfoResponse {  
   // 权益账户个数
   int64 equityAccountNum=2;
   // 昨日电票账户个数
   int64 equityAccountNumFront=3;
   // 昨日短信账户个数
   int64 equityAccountSMSNumFront=4;
   // 短信账户个数
   int64 equityAccountSMSNum=5;
   // 电票账户个数
   int64 equityAccountInvoiceNum=6;
   // 昨日电票账户个数
   int64 equityAccountInvoiceNumFront=7;
   // 红包账户个数
   int64 equityRedPackNum=8;
   // 红包剩余金额
   int64 equityRedPackNumFront=9;
   // 红包账户个数
   int64 equityInterviewNum=10;
   // 红包剩余金额
   int64 equityInterviewNumFront=11;
   // 红包账户个数
   int64 equityPaymentFlowNum=12;
   // 红包剩余金额
   int64 equityPaymentFlowNumFront=13;
   // 红包账户个数
   int64 equityIdCardNum=14;
   // 红包剩余金额
   int64 equityIdCardNumFront=15;
   // 短信账户剩余条数
   int64 equitySMSbalance=16;
   // 电票账户剩余条数
   int64 equityInvoicebalance=17;
   // 红包剩余金额
   int64 equtiyRedPackbalance=18;
   // 支付笔数
   int64 paymentNum=19;
   // 昨日支付笔数
   int64 paymentNumFront=20;
   // 支付金额
   int64 paymentMoney=21;
   // 昨日支付金额
   int64 paymentMoneyFront=22;
   // 订单量
   int64 orderNum=23;
   // 昨日订单量
   int64 orderNumFront=24;
   // 待支付订单数
   int64 waitPaymentNum=25;
   // 昨日待支付订单数
   int64 waitPaymentNumFront=26;
   // 响应公共字段
   ResultHeader result=1;
}
message AccountInfoRequest {  
   // 账号ID
   string accountNo=2;
   // 请求公共字段
   RequestHeader header=1;
}
message AccountInfoResponse {  
   // 账号ID
   string accountNo=2;
   // 账号名称
   string accountName=3;
   // 电话
   string phone=4;
   // 头像
   string portrait=5;
   // 响应公共字段
   ResultHeader result=1;
}
message DateRequest {  
   // 查询时间
   string queryDate=2;
   // 请求公共字段
   RequestHeader header=1;
}
message QueryConsumeRankByGroupResponse {  
   // 集团维度统计消费排行
   repeated ConsumeRankByGroupModelList records=2;
   // 响应公共字段
   ResultHeader result=1;
}
message ConsumeRankByGroupModelList {  
   // 对应权益账户下从集团维度统计权益账户消费排行
   repeated ConsumeRankByGroupModel models=2;
   // 权益账户类型
   string eqyityType=3;
}
message ConsumeRankByGroupModel {  
   // 集团ID
   string organizationId=2;
   // 集团名称
   string organizationName=3;
   // 权益账户类型
   string equityType=4;
   // 资产扣减数量
   int64 consumeAmount=5;
}
message RechargePageInfoResponse {  
   // 充值明细列表
   repeated RechargeResponse records=3;
   // 查询分页信息
   ResultPageHeader pageHeader=2;
   // 响应公共字段
   ResultHeader result=1;
}
message RechargeResponse {  
   // rechargeModel
   RechargeModel model=2;
   // 资产充值流水号
   string rechargeTransNo=3;
   // 记录状态
   string action=4;
   // 创建时间
   string createStamp=5;
   // 修改时间
   string actionStamp=6;
   // 交易状态
   string rechargeTransState=7;
   // ID
   string id=8;
   // 开票状态
   string voicedState=9;
   // 电子发票ID
   string voicedId=11;
   // 账号名称
   string accountName=12;
   // 当前余额
   int64 currentBalance=13;
   // 响应公共字段
   ResultHeader result=1;
}
message RechargeModel {  
   // 资产充值请求号
   string rechargeOrderNo=2;
   // 账号ID
   string accountNo=3;
   // 资产充值数量
   int64 rechargeAmount=4;
   // 资产充值请求号
   string equityType=5;
   // 业务来源
   string businessSrc=6;
   // 业务类型
   string businessType=7;
   // 二级业务类型
   string subBusinessType=8;
   // 业务来源TOKEN
   string businessSrcToken=9;
   // 交易日期
   string transDate=10;
   // 交易时间
   string transTime=11;
   // 操作员
   string operatorId=12;
   // 备注
   string memo=13;
   // 订单金额
   int64 orderMoney=14;
   // 支付类型
   string payType=15;
   // 可开票金额
   int64 voicedMoney=16;
   // 归属机构id
   string organizationId=17;
   // 归属机构类型
   string organizationType=18;
}
message CorrectPageInfoResponse {  
   // 消费冲正明细列表
   repeated CorrectResponse records=3;
   // 查询分页信息
   ResultPageHeader pageHeader=2;
   // 响应公共字段
   ResultHeader result=1;
}
message CorrectResponse {  
   // correctModel
   CorrectModel model=2;
   // 资产消费流水号
   string correctTransState=3;
   // 资产消费流水号
   string correctTransNo=4;
   // 创建时间
   string createStamp=5;
   // 修改时间
   string actionStamp=6;
   // 记录状态
   string action=7;
   // ID
   string id=8;
   // 账号名称
   string accountName=9;
   // 当前余额
   int64 currentBalance=10;
   // 响应公共字段
   ResultHeader result=1;
}
message CorrectModel {  
   // 消费请求流水号
   string correctOrderNo=2;
   // 资产消费原流水号
   string originalConsumeTransNo=3;
   // 账号ID
   string accountNo=4;
   // 资产扣减数量
   int64 correctAmount=5;
   // 资产消费原金额
   int64 originalConsumeAmount=6;
   // 业务来源
   string businessSrc=7;
   // 业务类型
   string businessType=8;
   // 二级业务类型
   string subBusinessType=9;
   // 业务来源TOKEN
   string businessSrcToken=10;
   // 交易日期
   string transDate=11;
   // 交易时间
   string transTime=12;
   // 操作员
   string operatorId=13;
   // 备注
   string memo=14;
   // 权益账户类型
   string equityType=15;
   // 归属机构id
   string organizationId=16;
   // 归属机构类型
   string organizationType=17;
}
message QueryNoticePageRequest {  
   // 公告标题
   string title=3;
   // 操作员
   string operatorId=4;
   // 公告类型
   int32 noticeType=5;
   // 适用平台
   int32 noticeSystem=6;
   // 公告发布时间
   string publishBeginStamp=7;
   // 公告发布时间
   string publishEndStamp=8;
   // 公告生效开始时间
   string effectiveBeginStamp=9;
   // 公告生效结束时间
   string effectiveEndStamp=10;
   // 记录状态
   int32 action=11;
   // 归属机构id
   int32 pageNo=12;
   // 归属机构id
   int32 pageSize=13;
   // 请求公共字段
   RequestHeader header=1;
}
message QueryNoticePageResponse {  
   // 公告明细列表
   repeated NoticeInfoResponse records=3;
   // 查询分页信息
   ResultPageHeader pageHeader=2;
   // 响应公共字段
   ResultHeader result=1;
}
message QueryNoticeRequest {  
   // 归属机构类型
   int32 noticeType=2;
   // 归属机构id
   string organizationId=3;
   // 适用平台
   int32 noticeSystem=4;
   // 交易时间
   string time=5;
   // 请求公共字段
   RequestHeader header=1;
}
message UpdateNoticeRequest {  
   // ID
   int64 id=2;
   // 公告标题
   string title=3;
   // 公告发布时间
   string publishStamp=4;
   // 公告生效开始时间
   string effectiveBeginStamp=5;
   // 公告生效结束时间
   string effectiveEndStamp=6;
   // 权益账户类型
   string noticeType=7;
   // 公告信息
   string message=8;
   // 是否可以提现
   string noticeWithdraw=9;
   // 适用平台
   string noticeSystem=10;
   // 公告通知集合
   string noticeList=11;
   // 操作员
   string operatorId=12;
   // 公告备注
   string memo=13;
   // 公告状态
   string noticeStats=14;
   // 记录状态
   string action=15;
   // 请求公共字段
   RequestHeader header=1;
}
message QueryNoticeDetailRequest {  
   // ID
   int64 id=2;
   // 请求公共字段
   RequestHeader header=1;
}
message QueryGroupRequest {  
   // 归属机构id
   string groupID=3;
   // 归属机构id
   string groupName=4;
   // 归属机构id
   int32 pageNo=5;
   // 归属机构id
   int32 pageSize=6;
   // 请求公共字段
   RequestHeader header=1;
}
message QueryGroupInfoResponse {  
   // 集团列表
   repeated GroupInfoModel records=3;
   // 查询分页信息
   ResultPageHeader pageHeader=2;
   // 响应公共字段
   ResultHeader result=1;
}
message GroupInfoModel {  
   // 归属机构id
   string groupName=3;
   // 归属机构id
   string groupId=4;
}
message QueryFsmSettleRequest {  
   // 归属机构id
   string groupID=3;
   // 请求公共字段
   RequestHeader header=1;
}
message QueryFsmSettleResponse {  
   // 结算主体列表
   repeated SettleUnitModel records=3;
   // 响应公共字段
   ResultHeader result=1;
}
message SettleUnitModel {  
   // 归属机构id
   int64 settleUnitID=3;
   // 归属机构id
   string settleUnitName=4;
   // 归属机构id
   int32 groupID=5;
}
//
service BusinessOperationService{
    //查询消费记录
    rpc queryConsumePageInfo(QueryPageInfoRequest) returns (ConsumePageInfoResponse) {}
    //添加公告接口
    rpc insertNoticeInfo(NoticeInfoRequest) returns (NoticeInfoResponse) {}
    //统计各权益账户类型近30日数据趋势
    rpc staticsEquityTrendByAction(StaticsEquityTrendByActionRequest) returns (StaticsEquityTrendByActionResponse) {}
    //数据首页
    rpc queryFirstPageInfo(FirstPageInfoRequest) returns (FirstPageInfoResponse) {}
    //查询账户信息
    rpc getAccountInfo(AccountInfoRequest) returns (AccountInfoResponse) {}
    //查询集团消费量top10
    rpc queryConsumeRankByGroup(DateRequest) returns (QueryConsumeRankByGroupResponse) {}
    //查询充值记录
    rpc queryRechargePageInfo(QueryPageInfoRequest) returns (RechargePageInfoResponse) {}
    //查询冲正记录
    rpc queryCorrectPageInfo(QueryPageInfoRequest) returns (CorrectPageInfoResponse) {}
    //查询公告list接口
    rpc queryNoticePageInfo(QueryNoticePageRequest) returns (QueryNoticePageResponse) {}
    //查询当前有效期公告接口
    rpc queryNoticeInfoEffective(QueryNoticeRequest) returns (NoticeInfoResponse) {}
    //更新公告接口
    rpc updateNoticeInfo(UpdateNoticeRequest) returns (NoticeInfoResponse) {}
    //查询单个公告
    rpc queryNoticeInfoDetail(QueryNoticeDetailRequest) returns (NoticeInfoResponse) {}
    //查询集团列表
    rpc getGroupPageInfoList(QueryGroupRequest) returns (QueryGroupInfoResponse) {}
    //查询结算主体列表
    rpc queryFsmSettleUnit(QueryFsmSettleRequest) returns (QueryFsmSettleResponse) {}
    //立即生效发布终止接口
    rpc immediate(UpdateNoticeRequest) returns (NoticeInfoResponse) {}
}
